@startuml

[*] -[bold]> PendingAllocation
PendingAllocation -[bold]down> Allocating
Allocating -[bold]> Allocated
Allocated -[bold]> AgentStarted
AgentStarted -[bold]> PendingTermination
PendingTermination -[bold]down> Terminating
Terminating -[bold]> Terminated

PendingAllocation : initial status
PendingAllocation : after VM creation
PendingAllocation : by Scheduler

Allocating: a worker is trying\nto allocate the VM\nvia AWS SDK calls
Allocating -> Terminated
Allocating -[dotted,#blue]> Terminated
Allocating -[dotted,#blue]> PendingAllocation
Allocating -> PendingAllocation

Allocated: AWS SDK allocation calls\ncompleted successfully,\nwaiting for agent to start
Allocated -[dotted,#blue]> PendingTermination

AgentStarted: agent started and\nis sending heartbeats
AgentStarted -[dotted,#blue]> PendingTermination

PendingTermination: scheduler decided\nto terminate\nthe VM

Terminating: a worker is trying\nto terminate the VM\nvia AWS SDK calls
Terminating -> PendingTermination
Terminated: AWS SDK termination call\ncompleted successfully
Terminated -[bold]> [*]

@enduml
